Fixed on mobile version

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -2,9 +2,16 @@
 @import './customClasses.scss';
 @import './mixins/flex.scss';
 
-html, body, #app, .fullHeightWidth {
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+body, #app, .fullHeightWidth {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 *, *:before, *:after {
